--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,55 @@
-Django==3.2.3
-djangorestframework==3.12.4
-django-cors-headers==3.13.0
-psycopg2-binary==2.9.3
+aiogram==2.24
+aiohttp==3.8.3
+aiosignal==1.3.1
+alembic==1.13.0
+asgiref==3.7.2
+async-timeout==4.0.2
+attrs==22.2.0
+Babel==2.9.1
+certifi==2022.9.24
+cffi==1.16.0
+charset-normalizer==2.1.1
+cryptography==41.0.4
+defusedxml==0.8.0rc2
+distlib==0.3.6
+Django==4.2.5
+django-cors-headers==4.3.1
+django-templated-mail==1.1.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
+djoser==2.2.0
+filelock==3.9.0
+flake8==6.1.0
+frozenlist==1.3.3
+greenlet==3.0.1
+idna==3.4
+magic-filter==1.0.9
+Mako==1.3.0
+MarkupSafe==2.1.3
+mccabe==0.7.0
+multidict==6.0.4
+mysql-client==0.0.1
+mysqlclient==2.2.0
+oauthlib==3.2.2
+pillow==10.2.0
+platformdirs==2.6.2
+psycopg==3.1.18
+psycopg2==2.9.9
+pycodestyle==2.11.0
+pycparser==2.21
+pyflakes==3.1.0
+PyJWT==2.8.0
 python-dotenv==1.0.0
+python3-openid==3.2.0
+pytz==2022.7.1
+requests==2.31.0
+requests-oauthlib==1.3.1
+social-auth-app-django==5.3.0
+social-auth-core==4.4.2
+SQLAlchemy==2.0.23
+sqlparse==0.4.4
+typing_extensions==4.8.0
+urllib3==2.0.6
+virtualenv==20.17.1
+webcolors==1.13
+yarl==1.8.2
